updated get all apis
